# slurm_sweeps

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
src/slurm_sweeps/: __init__.py  asha.py  backend.py  backends.py  constants.py  database.py  experiment.py  logger.py  sampler.py  ssdb.py  storage.py  suggest.py  trial.py
src/slurm_sweeps/integrations/: lightning.py
tests/: lightning_integration.py  lightning_integration.sh  lightning_integration_local.py  test_asha.py  test_database.py  test_readme.py  test_sampler.py  test_trial.py
