[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm_sweeps"
description= "A simple tool to perform sweeps on SLURM clusters."
readme = "README.md"
version = "0.1a1"
requires-python = ">=3.9"
dependencies = [
    "cloudpickle",
    "numpy",
    "pandas",
    "pyyaml",
]

[tool.isort]
profile = "black"
