[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm_sweeps"
description= "A simple tool to perform sweeps on SLURM clusters."
readme = "README.md"
version = "0.1.3"
requires-python = ">=3.8"
dependencies = [
    "cloudpickle",
    "numpy",
    "pandas",
    "pyyaml",
]

[tool.isort]
profile = "black"
